--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,8 +1,8 @@
 /* == FOOTER == */
 
 footer {
-  /* z-index: 90; */
-  margin-top: auto;
+  z-index: 90;
+  margin-top: -0.7em;
   display: flex;
   justify-content: center;
   align-content: center;
