--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,8 +53,8 @@ body {
 }
 
 a {
-  /* text-decoration: none; */
-  color: var(--secondary-clr);
+  text-decoration: none;
+  /* color: var(--secondary-clr); */
 }
 
 h1 {
@@ -70,6 +70,7 @@ h2 {
 }
 
 h3 {
+  color: var(--primary-clr);
   font-size: var(--fs-h3);
   margin: 0 1em;
 }
@@ -140,22 +141,21 @@ h3 {
 }
 .hero__content {
   z-index: 2;
+  min-width: 22.5em;
   display: flex;
   justify-content: center;
   align-content: center;
   flex-direction: column;
 }
 
-.hero__logo,
-.hero__description {
+.hero__logo {
   width: 100%;
-  /* margin: 0 auto; */
-  /* text-align: left; */
   font-size: 12vw;
 }
 
 .hero__description {
-  font-size: 5vw;
+  width: 100%;
+  font-size: 4vw;
   color: #000;
   margin-bottom: 3em;
 }
@@ -259,8 +259,8 @@ section > p {
 }
 
 img {
-  width: 30px;
-  height: 30px;
+  width: 100%;
+  height: 100%;
 }
 
 img:hover {
@@ -271,8 +271,7 @@ img:hover {
 
 @media (max-width: 786px) {
   .ctnr {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding: 0 2.5rem;
   }
 }
 /* 
