--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,5 +1,11 @@
 @import url("/style.css");
 
+/* === TYPOGRAPHY === */
+
+.contact__title {
+  font-size: 1.5rem;
+}
+
 /* === FORM === */
 
 .form {
@@ -99,10 +105,15 @@
 
 /* === ICONS === */
 a .fa {
-  color: --var(--tertiary-clr);
-  font-size: 2.5em;
-  /* text-shadow: 2px 2px 4px #000000; */
+  color: rgb(45, 253, 185);
+  font-size: 2em;
+  text-shadow: 1px 1px #fff;
 }
+
 .fa:hover {
-  color: --var(--tertiary-clr);
+  color: rgb(255, 20, 86);
 }
+
+/* === Media Query === */
+
+/* === Mobile */
