--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -1,1 +1,15 @@
 @import url("/css/style.css");
+
+.language__list {
+  display: flex;
+}
+.language__title {
+  font-size: 1.5rem;
+}
+
+/* === ICONS === */
+
+i .fab {
+  font-size: 1rem;
+  color: aqua;
+}
