--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,8 +182,13 @@ h3 {
 }
 
 /* ===== PAGES INTRO ===== */
+p {
+  line-height: 1.5;
+}
 
-/* .intro */
+.intro__title {
+  margin-bottom: 1em;
+}
 
 /* ===== SOCIAL ===== */
 
@@ -198,14 +203,8 @@ h3 {
   /* align-content: center; */
 }
 
-.language {
+.language__list {
   display: flex;
-  justify-content: end;
-  align-content: flex-end;
-  flex-direction: column;
-
-  /* margin: 0.5em auto; */
-  /* text-align: center; */
 }
 
 .social,
@@ -238,9 +237,10 @@ section > p {
 }
 
 .download__cv {
+  color: #e9f1f7;
   display: flex;
   width: 100%;
-  /* background-color: rgb(255, 20, 86); */
+  background-color: rgb(255, 20, 86);
   padding: 1em;
   border: 1px solid rgb(255, 20, 86);
   /* border-radius: 15px; */
@@ -248,7 +248,7 @@ section > p {
   justify-content: center;
   align-content: center;
   text-align: center;
-  text-shadow: 1px 2px rgb(255, 20, 86);
+  /* text-shadow: 1px 2px rgb(255, 20, 86); */
   font-weight: var(--fw-l);
   letter-spacing: 0.0625em;
 }
