--- a/css/info.css
+++ b/css/info.css
@@ -25,7 +25,7 @@
 }
 
 .intro__title {
-  margin: 0 4rem;
+  margin: 0 3.5rem;
   align-items: flex-start;
 }
 
@@ -117,10 +117,6 @@
   .intro__title {
     margin-top: 1em;
   }
-  /* .ctnr {
-    padding: 0;
-    margin: 0;
-  } */
   .info {
     margin: 0 1.5em;
     flex-wrap: wrap;
@@ -128,34 +124,36 @@
   }
   .language__list i {
     font-size: 2em;
-    /* padding: 0 1em; */
-    /* margin: 0.5em auto; */
   }
 }
 
 @media (max-width: 580px) {
   .intro__title {
+    margin: 1.5em 0 0.5em 0;
+    align-self: center;
   }
   .ctnr {
     padding: 0;
     margin: 0;
   }
+
+  .language__list {
+    display: flex;
+    justify-content: center;
+  }
   .language__list i {
     font-size: 1.5em;
-    /* padding: 0 1em; */
-    /* margin: 1em auto; */
   }
   .info__title {
     font-size: 2em;
+    text-align: center;
   }
 }
 
 @media (max-width: 370px) {
-  .intro {
-    margin: 0 2em;
-  }
   .intro__title {
-    margin-top: 2em;
+    font-size: 2rem;
+    margin: 1.5em 0 0.5em 0;
   }
   .info {
     /* margin: 0 2em; */
@@ -165,17 +163,12 @@
     flex-direction: column;
   }
   .info__title {
-    font-size: 1em;
-  }
-  .language__list {
-    margin-left: -2.5em;
+    font-size: 1.5em;
   }
   .language__list-htmlCss,
   .language__list-js {
-    font-size: 0.5em;
+    font-size: 1em;
     padding: 0 0.2em;
     justify-items: center;
-    /* width: 100%; */
-    /* margin: 0.5em auto; */
   }
 }
