--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-size: var(--fs-b);
   font-weight: var(--fw-m);
   line-height: 1.15;
@@ -111,7 +111,8 @@ p {
 
 .intro {
   box-sizing: border-box;
-  display: flex;
+  /* width: 100%; */
+  display: block;
   justify-items: center;
   align-items: flex-start;
   flex-direction: column;
@@ -126,4 +127,16 @@ p {
 
 p {
   line-height: 1.5;
+}
+
+/* ==== Coming Soon Note ==== */
+.comingSoon {
+  width: 100%;
+  border: rgb(45, 253, 185) solid 5px;
+  margin: 1em auto;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
 }
