--- a/css/footer.css
+++ b/css/footer.css
@@ -2,8 +2,8 @@
 
 footer {
   z-index: 90;
-  margin-top: -0.7em;
-  margin-bottom: 0;
+  margin: 0;
+  margin-top: -15px;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -12,7 +12,7 @@ footer {
 footer p {
   /* margin-bottom: 0.5em; */
   color: var(--secondary-clr);
-  font-size: 0.65rem;
+  font-size: 0.6rem;
   font-weight: 700;
 }
 footer a {
