--- a/css/menu.css
+++ b/css/menu.css
@@ -82,7 +82,7 @@
 .menu {
   background: var(--primary-clr);
   color: transparent;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 1%;
   left: 0.5%;
@@ -91,7 +91,7 @@
   justify-content: center;
   align-content: center;
   user-select: none;
-  margin-bottom: auto;
+  margin-bottom: 0.625em;
   width: 0rem;
   z-index: -5;
   overflow: hidden;
@@ -100,7 +100,7 @@
   z-index: 3;
   /* width: -webkit-calc(100% - 10rem); */
   width: calc(100% - 0.5rem);
-  /* width: 100%; */
+  width: 100%;
   overflow: visible;
   /* color: var(--tertiary-clr); */
 }
@@ -114,7 +114,7 @@
   display: flex;
   text-align: left;
   justify-content: center;
-  margin-bottom: 1.2em;
+  margin-bottom: 1.1vh;
 }
 .nav__list {
   z-index: 3;
@@ -123,7 +123,7 @@
   flex-direction: column;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0.625em;
 }
 .nav__item {
   cursor: pointer;
@@ -133,13 +133,14 @@
   text-align: center;
   text-decoration: none;
   margin: auto;
+  padding: 0.625em 0;
 }
 
 .nav__item li {
   /* z-index: 3; */
-  /* margin: 1em; */
-  margin: 0 193.578px;
+  /* margin: 0 193.578px; */
 }
+
 .nav__item a {
   color: rgb(45, 253, 185);
   font-size: 5vw;
