--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap");
 
+/* ****************************************************** */
 /* VARIABLES */
 :root {
   --ff-primary: "Montserrat";
 
-  --primary-clr: #e9f1f7;
+  --primary-clr: rgb(233, 241, 247);
   --secondary-clr: rgb(45, 253, 185);
   --tertiary-clr: rgb(255, 20, 86);
 
@@ -14,15 +15,15 @@
   --fw-l: 900;
 
   /* font-size */
-  --fs-b: 1rem;
+  --fs-b: 1.2em;
   --fs-h1: 12vw;
   --fs-h2: 7.786vw;
-  --fs-h3: 3.893vw;
+  --fs-h3: 3.9vw;
 
   --bp: 1em solid;
   --b-clr: var(--primary-clr);
 }
-
+/* ****************************************************** */
 * {
   box-sizing: border-box;
   list-style: none;
@@ -37,8 +38,6 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   font-family: "Montserrat", sans-serif;
   font-size: var(--fs-b);
   font-weight: var(--fw-m);
@@ -78,16 +77,13 @@ h2 {
 h3 {
   color: var(--primary-clr);
   font-size: var(--fs-h3);
-  /* margin: 0 1em; */
 }
 
 p {
   font-size: --var(--fs-b);
-  /* line-height: 1.5; */
 }
 
 /* ===== LAYOUT =====*/
-
 /* Global layout */
 
 .ctnr {
@@ -99,34 +95,32 @@ p {
     rgba(250, 112, 154, 0.5),
     rgba(254, 225, 64, 0.5)
   );
-  border: 1em solid #e9f1f7;
+  border: 1em solid;
+  border-color: var(--primary-clr);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   justify-content: center;
-  z-index: 1;
 }
 
-/* ===== PAGES INTRO ===== */
+.wrapper {
+  max-width: 100%;
+  display: grid;
+  width: 90%;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1.5em;
+  margin: auto;
+  margin-top: 0;
+}
 
-.intro {
+.title {
   box-sizing: border-box;
-  /* width: 100%; */
-  display: block;
-  justify-items: center;
-  align-items: flex-start;
-  flex-direction: column;
-  margin: 0 4em;
-}
-
-.intro__title {
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-}
-
-p {
-  line-height: 1.5;
+  display: grid;
+  max-width: 90%;
+  grid-template-columns: 1fr;
+  grid-gap: 1.5em;
+  width: 100%;
+  margin: auto;
 }
 
 /* ==== Coming Soon Note ==== */
