--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,10 @@ p {
   );
   border: 1em solid;
   border-color: var(--primary-clr);
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   min-height: 100vh;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .wrapper {
@@ -114,17 +114,17 @@ p {
 }
 
 .title {
-  box-sizing: border-box;
-  display: grid;
+  /* box-sizing: border-box; */
+  /* display: grid; */
   max-width: 90%;
-  grid-template-columns: 1fr;
-  grid-gap: 1.5em;
+  /* grid-template-columns: 1fr; */
+  /* grid-gap: 1.5em; */
   width: 100%;
-  margin: auto;
+  margin: 2.9% auto 0;
 }
 
 /* ==== Coming Soon Note ==== */
-.comingSoon {
+/* .comingSoon {
   width: 100%;
   border: rgb(45, 253, 185) solid 5px;
   margin: 1em auto;
@@ -133,4 +133,4 @@ p {
   justify-content: center;
   text-align: center;
   width: 100%;
-}
+} */
