--- a/css/hero.css
+++ b/css/hero.css
@@ -10,7 +10,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align-last: center;
+  /* added 7/10 */
+  /* text-align-last: center; */
 }
 
 .hero__video {
@@ -26,10 +27,11 @@
   min-width: 100%;
   min-height: 100%;
   object-fit: cover;
+  position: absolute;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  position: absolute;
 }
 
 .hero__overlay {
@@ -52,18 +54,27 @@
   justify-content: center;
   align-content: center;
   flex-direction: column;
+  /* added 7/10 */
+  text-align: center;
+  /* margin: auto; */
 }
 
 .hero__logo {
   width: 100%;
   font-size: 12vw;
+  /* added 7/10 */
+  /* text-align: center; */
 }
 
 .hero__description {
   width: 100%;
   font-size: 4vw;
   color: rgb(0, 0, 0);
+  margin: auto;
   margin-bottom: 1.5em;
+  /* added 7/10 */
+  text-align: center;
+
 }
 
 .hero-btn {
