--- a/css/info.css
+++ b/css/info.css
@@ -3,8 +3,14 @@
 /* === TYPOGRAPHY === */
 .info__title {
   font-size: 2.5rem;
-
   margin-bottom: 0.5em;
+}
+.title h2 {
+  text-shadow: 3px 3px 9px rgba(0, 0, 0, 0.1);
+}
+.info-1 h3,
+.info-2 h3 {
+  text-shadow: 3px 3px 9px rgba(0, 0, 0, 0.1);
 }
 
 /* === LAYOUT === */
