Removed margin on card at max-width 55px

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -140,7 +140,7 @@ background: linear-gradient(-45deg, #24ff72, #9a4eff); */
     justify-content: center;
     align-items: center;
   }
-  .card {
+  /* .card {
     margin: 2rem;
-  }
+  } */
 }
