--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -87,8 +87,9 @@ background: linear-gradient(-45deg, #24ff72, #9a4eff); */
 }
 
 .portfolio-btn {
-  margin: auto;
-  margin-top: 2rem;
+  margin: 2rem auto;
+  /* margin-top: 2rem; */
+
   text-align: center;
 }
 .hero-btn {
