--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -31,7 +31,7 @@ background: linear-gradient(-45deg, #24ff72, #9a4eff); */
   grid-template-columns: 300px;
   grid-template-rows: 220px 100px 100px;
   grid-template-areas: "image" "text" "link";
-  border-radius: 18px;
+  /* border-radius: 18px; */
   text-align: center;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
   background: linear-gradient(-45deg, #f403d1, #64b5f6);
@@ -43,8 +43,8 @@ background: linear-gradient(-45deg, #24ff72, #9a4eff); */
 .card .card__image {
   width: 100%;
   height: auto;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  /* border-top-left-radius: 15px; */
+  /* border-top-right-radius: 15px; */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
